--- a/app/Resources/views/catalog/index.html.twig
+++ b/app/Resources/views/catalog/index.html.twig
@@ -1,6 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+
+    {%if is_granted('IS_AUTHENTICATED_REMEMBERED')%}
+        <a href="{{ path('logout')}}">Logout</a>
+    {% else %}
+        <a href="{{ path('login')}}">Login</a>
+    {% endif %}
     <h1>Catalogs list</h1>
 
     <table>
