display functionalities with roles only

--- a/src/FC/CatalogBundle/Resources/views/Catalog/index.html.twig
+++ b/src/FC/CatalogBundle/Resources/views/Catalog/index.html.twig
@@ -43,9 +43,13 @@
         </tbody>
     </table>
 
+    {%if is_granted('ROLE_ADMIN')%}
+
     <ul>
         <li>
             <a href="{{ path('catalog_new') }}">Create a new catalog</a>
         </li>
     </ul>
+    {% endif %}
+
 {% endblock %}
