protect views - only user == author can change

--- a/src/FC/CatalogBundle/Resources/views/Catalog/index.html.twig
+++ b/src/FC/CatalogBundle/Resources/views/Catalog/index.html.twig
@@ -33,9 +33,11 @@
                         <li>
                             <a href="{{ path('catalog_show', { 'id': catalog.id }) }}">show</a>
                         </li>
+                        {% if app.user == catalog.author %}
                         <li>
                             <a href="{{ path('catalog_edit', { 'id': catalog.id }) }}">edit</a>
                         </li>
+                        {% endif %}
                     </ul>
                 </td>
             </tr>
