--- a/src/FC/CatalogBundle/Resources/views/Catalog/edit.html.twig
+++ b/src/FC/CatalogBundle/Resources/views/Catalog/edit.html.twig
@@ -2,20 +2,23 @@
 
 {% block body %}
     <h1>Catalog edit</h1>
-
+    {% if app.user == catalog.author %}
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
         <input type="submit" value="Edit" />
     {{ form_end(edit_form) }}
+    {% endif %}
 
     <ul>
         <li>
             <a href="{{ path('catalog_index') }}">Back to the list</a>
         </li>
+        {% if app.user == catalog.author %}
         <li>
             {{ form_start(delete_form) }}
                 <input type="submit" value="Delete">
             {{ form_end(delete_form) }}
         </li>
+        {% endif %}
     </ul>
 {% endblock %}
