--- a/src/FC/CatalogBundle/Resources/views/Catalog/show.html.twig
+++ b/src/FC/CatalogBundle/Resources/views/Catalog/show.html.twig
@@ -32,6 +32,7 @@
         <li>
             <a href="{{ path('catalog_index') }}">Back to the list</a>
         </li>
+        {% if app.user == catalog.author %}
         <li>
             <a href="{{ path('catalog_edit', { 'id': catalog.id }) }}">Edit</a>
         </li>
@@ -40,5 +41,6 @@
                 <input type="submit" value="Delete">
             {{ form_end(delete_form) }}
         </li>
+        {% endif %}
     </ul>
 {% endblock %}
