create twig custom extension service container

--- a/src/FC/CatalogBundle/Resources/views/Catalog/index.html.twig
+++ b/src/FC/CatalogBundle/Resources/views/Catalog/index.html.twig
@@ -24,7 +24,7 @@
         {% for catalog in catalogs %}
             <tr>
                 <td><a href="{{ path('catalog_show', { 'slug': catalog.slug }) }}">{{ catalog.id }}</a></td>
-                <td>{{ catalog.name }}</td>
+                <td>{{ catalog.name | bold | raw}}</td>
                 <td>{{ catalog.description }}</td>
                 <td>{% if catalog.releaseDate %}{{ catalog.releaseDate|date('Y-m-d H:i:s') }}{% endif %}</td>
                 <td>{{ catalog.imageName }}</td>
